--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
   margin-top: 5%;
   border: 5px dashed #333;
   border-radius: 10px;
+  overflow: hidden;
 }
 #helper-text {
   text-align: center;
@@ -59,7 +60,7 @@ ul {
 }
 .image-size {
   position: absolute;
-  bottom: 0;
+  bottom: 2px;
   left: 0;
   background-color: #333;
   opacity: 0.6;
@@ -80,6 +81,7 @@ ul {
   width: 1em;
   text-align: center;
   margin-right: 0 !important;
+  text-shadow: 0 3px 3px white, 0 -3px 3px white, 3px 0 3px white, -3px 0 3px white;
   opacity: 0.7;
   line-height: 1em;
   font-size: 200%;
@@ -96,6 +98,9 @@ a.image:visited .image-hover:before { content: '\2713'; }
   position: absolute;
   right: 10px;
   bottom: 5px;
+}
+.image-height-light {
+  border-bottom: 4px solid #066ff5;
 }
 
 .image-loading {
